--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,7 @@
 * {
     padding:0;
     margin: 0;
+   
 }
 li {
     list-style: none;
@@ -8,7 +9,7 @@ li {
 
 a {
     Text-decoration:none;
-    color: #444853
+    color: #000;
 }
 a :hover {
         color:#F70776;
@@ -17,38 +18,44 @@ a :hover {
 header {
     width: 100%;
     height: 50px;
-    background-color: white;
 }
 .menu ul {
     display: flex ;
  float: right;
-
    padding: 10px 0;
    padding-right: 10px;
+   position: fixed;
+   top:15px;
+   right:0;
 }
 
 .menu ul li {
-    margin-right: 40px;
+    margin-right: 80px;
     font-size: 30px;
-
-
+    font-family: 'Abril Fatface', cursive;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Crete Round', serif;
+    font-family: 'Klee One', cursive;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Noto Serif JP', serif;
 }
-.menu {
-        background-color: aqua;
-
-}
-
-.content {
+body {
     height: 610px;
     width: 100%;
-    background-image: url(背景.png);
+    background-image: url(602270_l.jpg);
     background-size: cover;
     margin-top: 15px;
     
 }
 .content-title {
-    padding-top: 100px;
+    padding-top: 200px;
     padding-left: 200px;
+    font-family: 'Abril Fatface', cursive;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Crete Round', serif;
+    font-family: 'Klee One', cursive;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Noto Serif JP', serif;
 }
 h1 {
     font-size: 64px;
@@ -56,16 +63,15 @@ h1 {
 h2 {
     font-size: 32px;
 }
-
-
 footer {
         height: 50px;
-        
-        background-color: white;
-        
+        width: 100%;
+        position: fixed;
+        bottom:0;
+
 }
 .copyright {
     text-align: center;
-    margin: 20px 0 ;
+    padding-top: 10px;
         font-size: 18px;
 }
