--- a/portfolio.css
+++ b/portfolio.css
@@ -44,11 +44,10 @@ body {
     width: 100%;
     background-image: url(602270_l.jpg);
     background-size: cover;
-    margin-top: 15px;
-    
 }
 .content-title {
-    padding-top: 200px;
+    width: 100%;
+    padding-top: 220px;
     padding-left: 200px;
     font-family: 'Abril Fatface', cursive;
     font-family: 'Barlow Semi Condensed', sans-serif;
@@ -68,10 +67,125 @@ footer {
         width: 100%;
         position: fixed;
         bottom:0;
-
 }
 .copyright {
     text-align: center;
     padding-top: 10px;
         font-size: 18px;
 }
+
+
+
+
+/*----------------------------
+* メニュー開閉ボタン
+*----------------------------*/
+.menu-btn {
+    position: fixed;
+    left: 0px;
+    top: 20px;
+    z-index: 2;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+    color: #fff;
+    border: 1px solid #fff;
+    display: none;
+  }
+  
+  /*----------------------------
+  * メニュー本体
+  *----------------------------*/
+  .humberger-menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #fdfbfb;
+    font-size: 25px;
+  }
+  .menu__item {
+    width: 100%;
+    height: auto;
+    padding: 0.5em 1em;
+    text-align: center;
+    color: #fff;
+    box-sizing: border-box;
+  }
+  
+  /*----------------------------
+  * アニメーション
+  *----------------------------*/
+  
+  /* アニメーション前のメニューの状態 */
+  .humberger-menu {
+    transform: translateX(-500vw);
+    transition: all 0.3s linear;
+  }
+  /* アニメーション後のメニューの状態 */
+  .humberger-menu.is-active {
+    transform: translateX(0);
+  }
+
+
+
+
+
+
+
+
+
+
+
+  @media (max-width: 1000px) {
+   
+.menu {
+    display: none;
+}
+.menu-btn {
+    position: fixed;
+    left: 10px;
+    z-index: 2;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+    color: #fff;
+    border: 1px solid #fff;
+  }
+
+  .content-title {
+    padding-top: 0px;
+    padding-left: 0px;
+   text-align: center;
+   position: fixed;
+   top: 300px;
+
+  }
+  h1,h2 {
+    font-size: 28px;
+}
+body {
+    height: 200px;
+   width: 100%;
+    background-image: url(602270_l.jpg);
+    background-size: cover;
+    height: 30px;
+}
+
+
+
+
+
+  }
