--- a/portfolio.css
+++ b/portfolio.css
@@ -1,77 +1,81 @@
 * {
-    padding:0;
-    margin: 0;
-   
+  padding:0;
+  margin: 0;
+ 
 }
 li {
-    list-style: none;
+  list-style: none;
 }
 
 a {
-    Text-decoration:none;
-    color: #000;
+  Text-decoration:none;
+  color: rgb(46, 46, 46);c
 }
 a :hover {
-        color:#F70776;
-        border-bottom:solid 1px;
+      color:#F70776;
 }
 header {
-    width: 100%;
-    height: 50px;
+  width: 100%;
+  height: 50px;
 }
 .menu ul {
-    display: flex ;
- float: right;
-   padding: 10px 0;
-   padding-right: 10px;
-   position: fixed;
-   top:15px;
-   right:0;
+  display: flex ;
+float: right;
+ padding: 10px 0;
+ padding-right: 10px;
+ position: fixed;
+ top:10px;
+ right:10px;
 }
 
 .menu ul li {
-    margin-right: 80px;
-    font-size: 30px;
-    font-family: 'Abril Fatface', cursive;
-    font-family: 'Barlow Semi Condensed', sans-serif;
-    font-family: 'Crete Round', serif;
-    font-family: 'Klee One', cursive;
-    font-family: 'Noto Sans JP', sans-serif;
-    font-family: 'Noto Serif JP', serif;
+  margin-right: 80px;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: 'Abril Fatface', cursive;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-family: 'Crete Round', serif;
+  font-family: 'Klee One', cursive;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Noto Serif JP', serif;
+  color: rgb(122, 121, 123);
 }
 body {
-    height: 610px;
-    width: 100%;
-    background-image: url(602270_l.jpg);
-    background-size: cover;
+  height: 610px;
+  width: 100%;
+  background-image: url(602270_l.jpg);
+  background-size: cover;
+  width: 100%;
 }
 .content-title {
-    width: 100%;
-    padding-top: 220px;
-    padding-left: 200px;
-    font-family: 'Abril Fatface', cursive;
-    font-family: 'Barlow Semi Condensed', sans-serif;
-    font-family: 'Crete Round', serif;
-    font-family: 'Klee One', cursive;
-    font-family: 'Noto Sans JP', sans-serif;
-    font-family: 'Noto Serif JP', serif;
+  width: 100%;
+  padding-top: 180px;
+  padding-left: 170px;
+  color: rgb(10, 10, 43);
+  font-family: 'Abril Fatface', cursive;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-family: 'Crete Round', serif;
+  font-family: 'Klee One', cursive;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Noto Serif JP', serif;
 }
 h1 {
-    font-size: 64px;
+  font-size: 68px;
 }
 h2 {
-    font-size: 32px;
+  font-size: 24px;
 }
 footer {
-        height: 50px;
-        width: 100%;
-        position: fixed;
-        bottom:0;
+      height: 50px;
+      width: 100%;
+      position: fixed;
+      bottom:0;
 }
 .copyright {
-    text-align: center;
-    padding-top: 10px;
-        font-size: 18px;
+  text-align: center;
+  padding-top: 10px;
+      font-size: 12px;
+      color: rgb(54, 38, 51);
 }
 
 
@@ -81,60 +85,60 @@ footer {
 * メニュー開閉ボタン
 *----------------------------*/
 .menu-btn {
-    position: fixed;
-    left: 0px;
-    top: 20px;
-    z-index: 2;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #000;
-    color: #fff;
-    border: 1px solid #fff;
-    display: none;
-  }
-  
-  /*----------------------------
-  * メニュー本体
-  *----------------------------*/
-  .humberger-menu {
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #fdfbfb;
-    font-size: 25px;
-  }
-  .menu__item {
-    width: 100%;
-    height: auto;
-    padding: 0.5em 1em;
-    text-align: center;
-    color: #fff;
-    box-sizing: border-box;
-  }
-  
-  /*----------------------------
-  * アニメーション
-  *----------------------------*/
-  
-  /* アニメーション前のメニューの状態 */
-  .humberger-menu {
-    transform: translateX(-500vw);
-    transition: all 0.3s linear;
-  }
-  /* アニメーション後のメニューの状態 */
-  .humberger-menu.is-active {
-    transform: translateX(0);
-  }
+  position: fixed;
+  left: 0px;
+  top: 20px;
+  z-index: 2;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  color: #fff;
+  border: 1px solid #fff;
+  display: none;
+}
+
+/*----------------------------
+* メニュー本体
+*----------------------------*/
+.humberger-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #fdfbfb;
+  font-size: 25px;
+}
+.menu__item {
+  width: 100%;
+  height: auto;
+  padding: 0.5em 1em;
+  text-align: center;
+  color: #fff;
+  box-sizing: border-box;
+}
+
+/*----------------------------
+* アニメーション
+*----------------------------*/
+
+/* アニメーション前のメニューの状態 */
+.humberger-menu {
+  transform: translateX(-500vw);
+  transition: all 0.3s linear;
+}
+/* アニメーション後のメニューの状態 */
+.humberger-menu.is-active {
+  transform: translateX(0);
+}
 
 
 
@@ -146,46 +150,46 @@ footer {
 
 
 
-  @media (max-width: 1000px) {
-   
+@media (max-width: 1000px) {
+ 
 .menu {
-    display: none;
+  display: none;
 }
 .menu-btn {
-    position: fixed;
-    left: 10px;
-    z-index: 2;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #000;
-    color: #fff;
-    border: 1px solid #fff;
-  }
+  position: fixed;
+  left: 10px;
+  z-index: 2;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  color: #fff;
+  border: 1px solid #fff;
+}
 
-  .content-title {
-    padding-top: 0px;
-    padding-left: 0px;
-   text-align: center;
-   position: fixed;
-   top: 300px;
+.content-title {
+  padding-top: 0px;
+  padding-left: 0px;
+ text-align: center;
+ position: fixed;
+ top: 300px;
 
-  }
-  h1,h2 {
-    font-size: 28px;
+}
+h1,h2 {
+  font-size: 28px;
 }
 body {
-    height: 200px;
-   width: 100%;
-    background-image: url(602270_l.jpg);
-    background-size: cover;
-    height: 30px;
+  height: 200px;
+ width: 100%;
+  background-image: url(602270_l.jpg);
+  background-size: cover;
+  height: 30px;
 }
 
 
 
 
 
-  }
+}
